--- a/package.json
+++ b/package.json
@@ -20,18 +20,19 @@
     "react-icons": "^4.11.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.1",
     "@testing-library/jest-dom": "6.1.2",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@types/jest": "29.5.5",
     "@types/react": "18.2.8",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.1",
+    "intersection-observer": "^0.12.2",
     "jest": "29.6.4",
     "jest-environment-jsdom": "29.6.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
     "typescript": "5.2.2"
   }
 }
