--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "contentlayer": "^0.3.4",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
-    "next": "14.0.1",
+    "next": "^13.5.6",
+    "next-contentlayer": "^0.3.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
