--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-router-dom": "^6.18.0",
     "swiper": "^11.0.3"
   },
   "devDependencies": {
