--- a/package.json
+++ b/package.json
@@ -39,5 +39,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "5.2.2"
-  }
+  },
+  "moduleFileExtensions": ["js", "jsx", "json", "node"]
 }
