--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "swiper": "^11.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@testing-library/jest-dom": "6.1.2",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
